Begin work on Dropzone

--- a/src/Files.App/Views/MainPage.xaml
+++ b/src/Files.App/Views/MainPage.xaml
@@ -170,6 +170,10 @@
 			SelectedItem="{x:Bind SidebarAdaptiveViewModel.SidebarSelectedItem, Mode=TwoWay}"
 			ViewModel="{x:Bind SidebarAdaptiveViewModel}">
 
+			<sidebar:SidebarView.Footer>
+				<uc:Dropzone Margin="8"></uc:Dropzone>
+			</sidebar:SidebarView.Footer>
+
 			<!--  Inner Content  -->
 			<sidebar:SidebarView.InnerContent>
 				<Grid
